@@ -72,9 +72,9 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
   /**
    * Constructor for the EntityHandler.
    *
-   * @param vertx vertx
-   * @param httpConfig httpConfig
-   * @param environmentConfig environmentConfig
+   * @param vertx              vertx
+   * @param httpConfig         httpConfig
+   * @param environmentConfig  environmentConfig
    * @param notificationConfig notificationConfig
    */
   public HttpEntityHandler(
@@ -86,8 +86,8 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     this.httpConfig = httpConfig;
     this.notificationConfig = notificationConfig;
     this.cartagoMessagebox = new CartagoMessagebox(
-      vertx.eventBus(),
-      environmentConfig
+        vertx.eventBus(),
+        environmentConfig
     );
     this.rdfStoreMessagebox = new RdfStoreMessagebox(vertx.eventBus());
     this.notificationMessagebox =
@@ -111,9 +111,9 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var requestUri = routingContext.request().absoluteURI();
 
     routingContext
-      .response()
-      .setStatusCode(HttpStatus.SC_MOVED_PERMANENTLY)
-      .headers()
+        .response()
+        .setStatusCode(HttpStatus.SC_MOVED_PERMANENTLY)
+        .headers()
         .add(HttpHeaders.LOCATION, requestUri.substring(0, requestUri.length() - 1));
     routingContext.response().end();
   }
@@ -128,7 +128,8 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     this.rdfStoreMessagebox
         .sendMessage(new RdfStoreMessage.GetEntity(entityIri))
         .onComplete(
-        this.handleStoreSucceededReply(routingContext, HttpStatus.SC_OK, this.getHeaders(entityIri))
+            this.handleStoreSucceededReply(routingContext, HttpStatus.SC_OK,
+                this.getHeaders(entityIri))
         );
   }
 
@@ -150,25 +151,24 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
       return;
     }
     this.rdfStoreMessagebox.sendMessage(
-      new RdfStoreMessage.GetEntityIri(this.httpConfig.getWorkspacesUri(), workspaceName)
+        new RdfStoreMessage.GetEntityIri(this.httpConfig.getWorkspacesUri(), workspaceName)
     ).compose(nameResponse ->
         this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.CreateWorkspace(nameResponse.body()))
-        .compose(response ->
-          this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.CreateWorkspace(
-                requestUri,
-                nameResponse.body(),
-                Optional.empty(),
-                response.body()
-              )
-            ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
-                  this.getHeaders(requestUri + nameResponse.body() + "/")))
-        )
-        .onFailure(context::fail)
+            .sendMessage(new CartagoMessage.CreateWorkspace(nameResponse.body()))
+            .compose(response ->
+                this.rdfStoreMessagebox
+                    .sendMessage(new RdfStoreMessage.CreateWorkspace(
+                            requestUri,
+                            nameResponse.body(),
+                            Optional.empty(),
+                            response.body()
+                        )
+                    ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
+                        this.getHeaders(requestUri + nameResponse.body() + "/")))
+            )
+            .onFailure(context::fail)
     );
   }
-
 
 
   /**
@@ -212,23 +212,30 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
         requestUri, artifactName)
     ).compose(nameResponse ->
         this.cartagoMessagebox
-        .sendMessage(new CartagoMessage.CreateArtifact(
-          agentId,
-          context.pathParam(WORKSPACE_ID_PARAM),
-          nameResponse.body(),
-          representation
-        ))
-        .compose(response ->
-          this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.CreateArtifact(
-                requestUri,
+            .sendMessage(new CartagoMessage.CreateArtifact(
+                agentId,
+                context.pathParam(WORKSPACE_ID_PARAM),
                 nameResponse.body(),
-                response.body()
-              )
-            ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
-                  this.getHeaders(requestUri + nameResponse.body() + "/")))
-        )
-        .onFailure(r -> context.response().setStatusCode(HttpStatus.SC_BAD_REQUEST).end()))
+                representation
+            ))
+            .compose(response ->
+                this.rdfStoreMessagebox
+                    .sendMessage(new RdfStoreMessage.CreateArtifact(
+                            requestUri,
+                            nameResponse.body(),
+                            response.body()
+                        )
+                    ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
+                        this.getHeaders(requestUri + nameResponse.body() + "/")))
+            )
+            .onFailure(r -> {
+                  if (r instanceof ReplyException e) {
+                    context.response().setStatusCode(e.failureCode()).end();
+                  } else {
+                    context.response().setStatusCode(HttpStatus.SC_INTERNAL_SERVER_ERROR).end();
+                  }
+            }
+            ))
     ;
   }
 
@@ -239,7 +246,7 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
   /**
    * Creating an Artifact given content in text/turtle.
    *
-   * @param context routingContext
+   * @param context              routingContext
    * @param entityRepresentation entityRepresentation as a turtle string (RDF syntax)
    */
   public void handleCreateArtifactTurtle(final RoutingContext context,
@@ -247,24 +254,25 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var requestUri = context.request().absoluteURI();
 
     this.rdfStoreMessagebox.sendMessage(new RdfStoreMessage.GetEntityIri(requestUri,
-        context.request().getHeader(SLUG_HEADER)))
-      .compose(
-        actualEntityName -> this.rdfStoreMessagebox.sendMessage(new RdfStoreMessage.CreateArtifact(
-          requestUri,
-          actualEntityName.body(),
-          this.representationFactory.createArtifactRepresentation(
-            context.pathParam(WORKSPACE_ID_PARAM),
-            actualEntityName.body(),
-            "https://purl.org/hmas/Artifact",
-            false
-          )
-        )).onComplete(
-          response -> this.rdfStoreMessagebox.sendMessage(new RdfStoreMessage.UpdateEntity(
-            requestUri + actualEntityName.body(),
-            entityRepresentation
-          )
-        ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
-          this.getHeaders(requestUri + actualEntityName.body())))))
+            context.request().getHeader(SLUG_HEADER)))
+        .compose(
+            actualEntityName -> this.rdfStoreMessagebox.sendMessage(
+                new RdfStoreMessage.CreateArtifact(
+                    requestUri,
+                    actualEntityName.body(),
+                    this.representationFactory.createArtifactRepresentation(
+                        context.pathParam(WORKSPACE_ID_PARAM),
+                        actualEntityName.body(),
+                        "https://purl.org/hmas/Artifact",
+                        false
+                    )
+                )).onComplete(
+                  response -> this.rdfStoreMessagebox.sendMessage(new RdfStoreMessage.UpdateEntity(
+                        requestUri + actualEntityName.body(),
+                        entityRepresentation
+                    )
+                ).onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
+                    this.getHeaders(requestUri + actualEntityName.body())))))
         .onFailure(f -> context.response().setStatusCode(HttpStatus.SC_BAD_REQUEST).end());
   }
 
@@ -286,14 +294,14 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var artifactName = representation.getString("artifactName");
     this.notificationMessagebox
         .sendMessage(new HttpNotificationDispatcherMessage.AddCallback(
-        this.httpConfig.getArtifactUriTrailingSlash(workspaceName, artifactName),
-        representation.getString("callbackIri")
-      ))
+            this.httpConfig.getArtifactUriTrailingSlash(workspaceName, artifactName),
+            representation.getString("callbackIri")
+        ))
         .compose(v -> this.cartagoMessagebox.sendMessage(new CartagoMessage.Focus(
-        agentId,
-        workspaceName,
-        artifactName
-      )))
+            agentId,
+            workspaceName,
+            artifactName
+        )))
         .onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_OK,
             this.getHeaders(context.request().absoluteURI())));
   }
@@ -311,10 +319,10 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
       return;
     }
     this.rdfStoreMessagebox
-      .sendMessage(new RdfStoreMessage.ReplaceEntity(
-        routingContext.request().absoluteURI(),
-        routingContext.body().asString()
-      ))
+        .sendMessage(new RdfStoreMessage.ReplaceEntity(
+            routingContext.request().absoluteURI(),
+            routingContext.body().asString()
+        ))
         .onComplete(this.handleStoreSucceededReply(routingContext));
   }
 
@@ -333,7 +341,7 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var temp = routingContext.request().absoluteURI().endsWith("/")
         ?
         routingContext.request().absoluteURI().substring(0,
-           routingContext.request().absoluteURI().length() - 1) :
+            routingContext.request().absoluteURI().length() - 1) :
         routingContext.request().absoluteURI();
 
     final var parts = temp.split("/");
@@ -346,7 +354,7 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
       );
     }
     this.rdfStoreMessagebox
-      .sendMessage(new RdfStoreMessage.DeleteEntity(routingContext.request().absoluteURI()))
+        .sendMessage(new RdfStoreMessage.DeleteEntity(routingContext.request().absoluteURI()))
         .onComplete(this.handleStoreSucceededReply(routingContext));
   }
 
@@ -365,39 +373,39 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
       case "subscribe":
         if (entityIri.matches("^https?://.*?:[0-9]+/workspaces/$")) {
           this.notificationMessagebox
-            .sendMessage(
-              new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
-            )
-            .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
+              .sendMessage(
+                  new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
+              )
+              .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
               .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
         } else {
           final var actualEntityIri =
               Pattern.compile("^(https?://.*?:[0-9]+/workspaces/.*?)/(?:artifacts|agents)/$")
-              .matcher(entityIri)
-              .results()
-              .map(r -> r.group(1))
-              .findFirst()
-              .orElse(entityIri);
+                  .matcher(entityIri)
+                  .results()
+                  .map(r -> r.group(1))
+                  .findFirst()
+                  .orElse(entityIri);
           this.rdfStoreMessagebox
               .sendMessage(new RdfStoreMessage.GetEntity(actualEntityIri))
               .compose(r -> this.notificationMessagebox.sendMessage(
-                // TODO: why do we need this if we have the same callback again?
-                new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
-            ))
+                  // TODO: why do we need this if we have the same callback again?
+                  new HttpNotificationDispatcherMessage.AddCallback(entityIri, callbackIri)
+              ))
               .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
               .onFailure(t -> routingContext.fail(
-              t instanceof ReplyException e && e.failureCode() == HttpStatus.SC_NOT_FOUND
-                ? HttpStatus.SC_NOT_FOUND
-                : HttpStatus.SC_INTERNAL_SERVER_ERROR
-            ));
+                  t instanceof ReplyException e && e.failureCode() == HttpStatus.SC_NOT_FOUND
+                      ? HttpStatus.SC_NOT_FOUND
+                      : HttpStatus.SC_INTERNAL_SERVER_ERROR
+              ));
         }
         break;
       case "unsubscribe":
         this.notificationMessagebox
-          .sendMessage(
-            new HttpNotificationDispatcherMessage.RemoveCallback(entityIri, callbackIri)
-          )
-          .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
+            .sendMessage(
+                new HttpNotificationDispatcherMessage.RemoveCallback(entityIri, callbackIri)
+            )
+            .onSuccess(r -> routingContext.response().setStatusCode(HttpStatus.SC_OK).end())
             .onFailure(t -> routingContext.fail(HttpStatus.SC_INTERNAL_SERVER_ERROR));
         break;
       default:
@@ -427,19 +435,19 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var workspaceName = routingContext.pathParam(WORKSPACE_ID_PARAM);
 
     this.cartagoMessagebox
-      .sendMessage(new CartagoMessage.JoinWorkspace(
-        agentId,
-        agentBodyName,
-        workspaceName
-      ))
-      .compose(response -> this.rdfStoreMessagebox
-          .sendMessage(new RdfStoreMessage.CreateBody(
-            workspaceName,
+        .sendMessage(new CartagoMessage.JoinWorkspace(
             agentId,
             agentBodyName,
-            response.body()
-          ))
-      )
+            workspaceName
+        ))
+        .compose(response -> this.rdfStoreMessagebox
+            .sendMessage(new RdfStoreMessage.CreateBody(
+                workspaceName,
+                agentId,
+                agentBodyName,
+                response.body()
+            ))
+        )
         .onComplete(this.handleStoreSucceededReply(routingContext));
   }
 
@@ -459,28 +467,28 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
 
     final var workspaceName = routingContext.pathParam(WORKSPACE_ID_PARAM);
     this.cartagoMessagebox
-      .sendMessage(new CartagoMessage.LeaveWorkspace(
-        agentId,
-        workspaceName
-      ))
-      .compose(r -> {
-        if (hint == null) {
+        .sendMessage(new CartagoMessage.LeaveWorkspace(
+            agentId,
+            workspaceName
+        ))
+        .compose(r -> {
+          if (hint == null) {
+            return this.rdfStoreMessagebox
+                .sendMessage(new RdfStoreMessage.DeleteEntity(
+                    this.httpConfig.getAgentBodyUriTrailingSlash(
+                        workspaceName,
+                        this.getAgentNameFromId(agentId)
+                    )
+                ));
+          }
           return this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.DeleteEntity(
-              this.httpConfig.getAgentBodyUriTrailingSlash(
-                workspaceName,
-                this.getAgentNameFromId(agentId)
-              )
-            ));
-        }
-        return this.rdfStoreMessagebox
-          .sendMessage(new RdfStoreMessage.DeleteEntity(
-            this.httpConfig.getAgentBodyUriTrailingSlash(
-              workspaceName,
-              hint
-            )
-          ));
-      })
+              .sendMessage(new RdfStoreMessage.DeleteEntity(
+                  this.httpConfig.getAgentBodyUriTrailingSlash(
+                      workspaceName,
+                      hint
+                  )
+              ));
+        })
         .onComplete(this.handleStoreSucceededReply(routingContext));
   }
 
@@ -500,21 +508,22 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final var subWorkspaceName = context.request().getHeader(SLUG_HEADER);
     this.cartagoMessagebox
         .sendMessage(new CartagoMessage.CreateSubWorkspace(
-        context.pathParam(WORKSPACE_ID_PARAM),
-        subWorkspaceName
-      ))
+            context.pathParam(WORKSPACE_ID_PARAM),
+            subWorkspaceName
+        ))
         .compose(response ->
-        this.rdfStoreMessagebox
-          .sendMessage(new RdfStoreMessage.CreateWorkspace(
-            this.httpConfig.getWorkspacesUri(),
-            subWorkspaceName,
-            Optional.of(this.httpConfig
-                .getWorkspaceUriTrailingSlash(context.pathParam(WORKSPACE_ID_PARAM))),
-            response.body()
-          ))
-            .onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
-                this.getHeaders(this.httpConfig.getWorkspaceUriTrailingSlash(subWorkspaceName))))
-      )
+            this.rdfStoreMessagebox
+                .sendMessage(new RdfStoreMessage.CreateWorkspace(
+                    this.httpConfig.getWorkspacesUri(),
+                    subWorkspaceName,
+                    Optional.of(this.httpConfig
+                        .getWorkspaceUriTrailingSlash(context.pathParam(WORKSPACE_ID_PARAM))),
+                    response.body()
+                ))
+                .onComplete(this.handleStoreSucceededReply(context, HttpStatus.SC_CREATED,
+                    this.getHeaders(
+                        this.httpConfig.getWorkspaceUriTrailingSlash(subWorkspaceName))))
+        )
         .onFailure(
             f -> context.response().setStatusCode(HttpStatus.SC_INTERNAL_SERVER_ERROR).end());
   }
@@ -556,19 +565,19 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
                   apiKey,
                   storeResponse.body(),
                   context.body().asString()
-          )).onSuccess(cartagoResponse -> {
-            final var httpResponse = context.response().setStatusCode(HttpStatus.SC_OK);
-            if (cartagoResponse.body() == null) {
-              httpResponse.end();
-            } else {
-              // TODO: Once we remove constriction on return type being json array this will
-              // move into CartagoVerticle
-              final var responseString = "[" + cartagoResponse.body() + "]";
-              httpResponse.putHeader(HttpHeaders.CONTENT_TYPE,
+              )).onSuccess(cartagoResponse -> {
+                final var httpResponse = context.response().setStatusCode(HttpStatus.SC_OK);
+                if (cartagoResponse.body() == null) {
+                  httpResponse.end();
+                } else {
+                  // TODO: Once we remove constriction on return type being json array this will
+                  // move into CartagoVerticle
+                  final var responseString = "[" + cartagoResponse.body() + "]";
+                  httpResponse.putHeader(HttpHeaders.CONTENT_TYPE,
                           HttpHeaderValues.APPLICATION_JSON)
                       .end(responseString);
-            }
-          })
+                }
+              })
               .onFailure(
                   t -> context.response().setStatusCode(HttpStatus.SC_INTERNAL_SERVER_ERROR).end());
         }).onFailure(
@@ -632,20 +641,20 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
   ) {
     this.rdfStoreMessagebox
         .sendMessage(new RdfStoreMessage.QueryKnowledgeGraph(
-        query,
-        defaultGraphUris.stream()
-          .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
-          .toList(),
-        namedGraphUris.stream()
-          .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
-          .toList(),
-        Optional.ofNullable(resultContentType).orElse("application/sparql-results+json")
-      ))
+            query,
+            defaultGraphUris.stream()
+                .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
+                .toList(),
+            namedGraphUris.stream()
+                .map(s -> URLDecoder.decode(s, StandardCharsets.UTF_8))
+                .toList(),
+            Optional.ofNullable(resultContentType).orElse("application/sparql-results+json")
+        ))
         .onSuccess(r ->
-        routingContext.response()
-          .putHeader(HttpHeaders.CONTENT_TYPE, resultContentType)
-          .end(r.body())
-      )
+            routingContext.response()
+                .putHeader(HttpHeaders.CONTENT_TYPE, resultContentType)
+                .end(r.body())
+        )
         .onFailure(t -> {
           if (t instanceof ReplyException e) {
             routingContext.response().setStatusCode(e.failureCode()).end();
@@ -675,31 +684,31 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
 
   private Map<String, List<String>> getWebSubHeaders(final String entityIri) {
     return this.notificationConfig.isEnabled()
-      ? Map.of(
-      "Link",
-      Arrays.asList(
-        "<" + this.notificationConfig.getWebSubHubUri() + ">; rel=\"hub\"",
-        "<" + entityIri + ">; rel=\"self\""
-      )
+        ? Map.of(
+        "Link",
+        Arrays.asList(
+            "<" + this.notificationConfig.getWebSubHubUri() + ">; rel=\"hub\"",
+            "<" + entityIri + ">; rel=\"self\""
+        )
     )
-      : Collections.emptyMap();
+        : Collections.emptyMap();
   }
 
   private Map<String, List<String>> getCorsHeaders() {
     return Map.of(
-      com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN,
-      Collections.singletonList("*"),
-      com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_CREDENTIALS,
-      Collections.singletonList("true"),
-      com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_METHODS,
-      List.of(
-        HttpMethod.GET.name(),
-        HttpMethod.POST.name(),
-        HttpMethod.PUT.name(),
-        HttpMethod.DELETE.name(),
-        HttpMethod.HEAD.name(),
-        HttpMethod.OPTIONS.name()
-      )
+        com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN,
+        Collections.singletonList("*"),
+        com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_CREDENTIALS,
+        Collections.singletonList("true"),
+        com.google.common.net.HttpHeaders.ACCESS_CONTROL_ALLOW_METHODS,
+        List.of(
+            HttpMethod.GET.name(),
+            HttpMethod.POST.name(),
+            HttpMethod.PUT.name(),
+            HttpMethod.DELETE.name(),
+            HttpMethod.HEAD.name(),
+            HttpMethod.OPTIONS.name()
+        )
     );
   }
 
@@ -717,10 +726,11 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
   }
 
   // TODO: support different content types
+
   /**
    * Handles the creation of a workspace given a turtle representation.
    *
-   * @param context routingContext
+   * @param context              routingContext
    * @param entityRepresentation entityRepresentation
    */
   private void handleCreateWorkspaceTurtle(final RoutingContext context,
@@ -733,9 +743,9 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
     final Model entityGraph;
     try {
       entityGraph = RdfModelUtils.stringToModel(
-        entityRepresentation,
-        entityIri,
-        RDFFormat.TURTLE
+          entityRepresentation,
+          entityIri,
+          RDFFormat.TURTLE
       );
     } catch (Exception e) {
       context.response().setStatusCode(HttpStatus.SC_BAD_REQUEST).end();
@@ -744,44 +754,47 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
 
     // TODO: if slug is without trailing backslash and representation is with then doesnt work
 
-    entityGraph.remove(null, RDF.TYPE, RdfModelUtils.createIri("https://purl.org/hmas/ResourceProfile"));
+    entityGraph.remove(null, RDF.TYPE,
+        RdfModelUtils.createIri("https://purl.org/hmas/ResourceProfile"));
     entityGraph.remove(null, RdfModelUtils.createIri("https://purl.org/hmas/isProfileOf"), null);
     entityGraph.remove(null, RDF.TYPE, RdfModelUtils.createIri("https://purl.org/hmas/Workspace"));
     this.rdfStoreMessagebox.sendMessage(new RdfStoreMessage.GetEntityIri(requestUri, name)).compose(
-        actualEntityName -> {
-          var workspaceRepresentation =
-              this.representationFactory.createWorkspaceRepresentation(actualEntityName.body(),
-                 new HashSet<>(), false);
-          try {
-            final var baseModel =
-                RdfModelUtils.stringToModel(workspaceRepresentation, entityIri, RDFFormat.TURTLE);
-            entityGraph.addAll(
-                RdfModelUtils.stringToModel(workspaceRepresentation, entityIri, RDFFormat.TURTLE));
-            baseModel.getNamespaces().forEach(entityGraph::setNamespace);
-            workspaceRepresentation = RdfModelUtils.modelToString(entityGraph, RDFFormat.TURTLE,
-                this.httpConfig.getBaseUri());
-          } catch (IOException e) {
-            throw new RuntimeException(e);
-          }
-          return this.rdfStoreMessagebox
-            .sendMessage(new RdfStoreMessage.CreateWorkspace(
-              requestUri,
-              actualEntityName.body(),
-              entityGraph.stream()
-                .filter(t ->
-                  t.getSubject().toString().contains(entityIri.stringValue())
-                    && t.getPredicate().equals(RdfModelUtils.createIri(
-                    "https://purl.org/hmas/isContainedIn"
-                  ))
-                )
-                .map(Statement::getObject)
-                .map(t -> t instanceof IRI i ? Optional.of(i) : Optional.<IRI>empty())
-                .flatMap(Optional::stream)
-                .map(IRI::toString)
-                .findFirst(),
-              workspaceRepresentation
-            ));
-        }).onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED)
+            actualEntityName -> {
+              var workspaceRepresentation =
+                  this.representationFactory.createWorkspaceRepresentation(actualEntityName.body(),
+                      new HashSet<>(), false);
+              try {
+                final var baseModel =
+                    RdfModelUtils.stringToModel(
+                        workspaceRepresentation, entityIri, RDFFormat.TURTLE);
+                entityGraph.addAll(
+                    RdfModelUtils.stringToModel(
+                        workspaceRepresentation, entityIri, RDFFormat.TURTLE));
+                baseModel.getNamespaces().forEach(entityGraph::setNamespace);
+                workspaceRepresentation = RdfModelUtils.modelToString(entityGraph, RDFFormat.TURTLE,
+                    this.httpConfig.getBaseUri());
+              } catch (IOException e) {
+                throw new RuntimeException(e);
+              }
+              return this.rdfStoreMessagebox
+                  .sendMessage(new RdfStoreMessage.CreateWorkspace(
+                      requestUri,
+                      actualEntityName.body(),
+                      entityGraph.stream()
+                          .filter(t ->
+                              t.getSubject().toString().contains(entityIri.stringValue())
+                                  && t.getPredicate().equals(RdfModelUtils.createIri(
+                                  "https://purl.org/hmas/isContainedIn"
+                              ))
+                          )
+                          .map(Statement::getObject)
+                          .map(t -> t instanceof IRI i ? Optional.of(i) : Optional.<IRI>empty())
+                          .flatMap(Optional::stream)
+                          .map(IRI::toString)
+                          .findFirst(),
+                      workspaceRepresentation
+                  ));
+            }).onSuccess(r -> context.response().setStatusCode(HttpStatus.SC_CREATED)
             .putHeader(HttpHeaders.CONTENT_TYPE, "text/turtle").end(r.body()))
         .onFailure(t -> context.response().setStatusCode(HttpStatus.SC_CREATED)
             .putHeader(HttpHeaders.CONTENT_TYPE, "text/turtle").end());
@@ -813,7 +826,7 @@ public class HttpEntityHandler implements HttpEntityHandlerInterface {
         });
 
         Optional.ofNullable(reply.result().body())
-          .filter(r -> !r.isEmpty())
+            .filter(r -> !r.isEmpty())
             .ifPresentOrElse(httpResponse::end, httpResponse::end);
       } else {
         final var exception = ((ReplyException) reply.cause());
